# PyFuse

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  pyfuse_pytest_report_Jul14-2026_205113.html  pyproject.toml  requirements.txt  resource-selection.md  settings.eg.yaml
.github/workflows/: docs-pages.yml
conda-recipe/: README.md  build.sh  meta.yaml
config/: settings.yaml  vcfheader.template.txt
docs/: annotation-columns.md  annotator-usage.md  changelog.md  description.md  index.md  installation.md  mane-transcripts.md  output-columns.md  outputs.md  publishing-and-compliance.md  resources-install-options.md  resources-overview.md  setup-and-usage.md  testing.md
docs/javascripts/: font-size.js
docs/stylesheets/: extra.css
src/pyfuse/: __init__.py  __main__.py  annotator.py  cli.py  test_cli.py
src/pyfuse/annotators/: add_black_list_genes.py  add_getex_cosmic_annotation.py  exon_annotations.py  fusion2vcf.py  fusion_frame_status.py  fusion_plot_links.py  fusion_sequence.py  mane_annotation.py
src/pyfuse/config/: settings.yaml
src/pyfuse/prep_resources/: build_gene_feature_table.py  extract_gene_info_from_gtf.py  format_refseq_annotation.py
src/pyfuse/preprocess/: fusion_parser.py  preprocess_fusion.py
src/pyfuse/utils/: common_utils.py  fus_table2html.py  resource_manger.py
tests/: conftest.py  test_cli_smoke.py  test_fusion_plot_links.py  test_gene_feature_table.py  test_pyfuse.py
tests/fixtures/input/: input_27cases.txt
tests/fixtures/truth_output/: expected_output_27cases.xlsx
